{Current player turn}, {next player turn}, and {next turn at} added to /players -- TODO: re-use this code in votes / rule propose
